--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,8 +72,8 @@ extra_javascript:
 
 nav:
   - Home: index.md
-  - Syllabus: syllabus.md
-  - Schedule: schedule.md
+  - Syllabus: syllabusa.md
+  - Week 1: week1.md
   # - Research:
   #   - "A paper": research/a-paper.md
   # - Software:
