--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,10 @@ nav:
   - Home: index.md
   - Syllabus: syllabus-a.md
   - Week 1: week1.md
+  - Week 2: week2.md
+  - Week 3: week3.md
+  - Week 4: week4.md
+  - Week 5: week5.md
   # - Research:
   #   - "A paper": research/a-paper.md
   # - Software:
