--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,10 @@ nav:
   - Week 3: week3.md
   - Week 4: week4.md
   - Week 5: week5.md
+  - Week 6: week6.md
+  - Week 7: week7.md
+  - Week 8: week8.md
+  - Week 9: week9.md
   # - Research:
   #   - "A paper": research/a-paper.md
   # - Software:
