Updated 516b Content Link

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,7 @@ nav:
   - Home: index.md
   - Syllabus: syllabus-a.md
   - Weekly Content: content.md
+  - 516b Content: syllabus-b.md
   # - Research:
   #   - "A paper": research/a-paper.md
   # - Software:
