--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ markdown_extensions:
   - pymdownx.highlight:
       linenums: true
   - pymdownx.inlinehilite
-  - pymdownx.smartsymbols
+  #- pymdownx.smartsymbols
   - pymdownx.superfences
   - pymdownx.tabbed
   #   alternate_style: true 
