--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ markdown_extensions:
   #   alternate_style: true 
   - pymdownx.tasklist:
       custom_checkbox: true
+      clickable_checkbox: true
 
 extra_javascript:
   # for mathjax
