--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,11 @@ extra_javascript:
   # for tablesort
   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
   - javascripts/tablesort.js
+  # section colors
+  - javascripts/section-color.js
+
+extra_css:
+  - css/section-colors.css
 
 nav:
   - Home: index.md
@@ -88,3 +93,5 @@ nav:
   # - Tutorials:
   #   - "A tutorial": tutorial/a-tutorial.md
   # - Collaborators: collaborators.md
+
+
