--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,11 @@ site_author: Trevor Pickering
 
 theme:
   name: material
+  features:
+    - navigation.tracking
+    - navigation.top
+    - navigation.tabs
+    - navigation.tabs.sticky
   palette:
     - scheme: default
       primary: indigo
